# ClangEx

./: .gitignore  ASTWalker.cpp  ASTWalker.h  CMakeLists.txt  ClangArgParse.cpp  ClangArgParse.h  ClangExCommand  ClangExMetamodel.dia  ClangExSchema  Clean.sh  README.md  main.cpp  test.txt
Driver/: ClangDriver.cpp  ClangDriver.h  main.cpp
File/: ClangArgParse.cpp  ClangArgParse.h  FileParse.cpp  FileParse.h
Graph/: ClangEdge.cpp  ClangEdge.h  ClangNode.cpp  ClangNode.h  LowMemoryTAGraph.cpp  LowMemoryTAGraph.h  TAGraph.cpp  TAGraph.h
Printer/: MinimalPrinter.cpp  MinimalPrinter.h  Printer.cpp  Printer.h  ProgressBar.c  ProgressBar.h  VerbosePrinter.cpp  VerbosePrinter.h
SampleCProgram/: main.c  test.ta
TupleAttribute/: TAProcessor.cpp  TAProcessor.h
Walker/: ASTWalker.cpp  ASTWalker.h  BlobWalker.cpp  BlobWalker.h  FullWalker.cpp  FullWalker.h  MinimalWalker.cpp  MinimalWalker.h  PartialWalker.cpp  PartialWalker.h
